apps/chatgpt-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  chatgpt-api
  namespace: chatgpt-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    hajimari.io/appName: chatgpt-api
    hajimari.io/icon: multimedia
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chatgpt-api.tribz.cloud
      secretName: chatgpt-api-tls-certificate
  rules:
    - host: chatgpt-api.tribz.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: chatgpt-api
                port:
                  number: 3000
